- For an original Apple //e, 80-column (PR#3) and INVERSE, it still appears to be mousetext character, but it should be inverted upper-case from $40 to $5F.


1.20.0 - 23 Feb 2011
--------------------
Changes:
. Standard, Text Optimized and Monochrome video modes now support half-pixel rendering accuracy!
. Colors tweaked to better match the real hardware.
Debugger
. See the Debugger_Changelog.txt for the various fixes and changes.
Misc:
. Updated acknowledgements. Cheers to Mike Harvey! (Nibble Magazine)


1.19.3 - 30 Dec 2010
--------------------
Changes:
. Set 50% scan lines as the default.

Fixes:
. Fix OpenFileName dialogs for Win98 (use older WinVer4 struct).
. Edits to the 'Printer dump filename' edit control are now recognised.


1.19.2 - 20 Dec 2010
--------------------
Changes:
. Added HD activity LED.
. Caps LED now takes up less space in full-screen mode.
. Debugger 2.7.0.0 (see Debugger_Changelog.txt)

Fixes:
. Fix for "APPLEWIN executed an invalid instruction" on Pentium II/266 CPU.
  - Rebuilt with Enhanced Instruction Set = Not Set (ie. no SSE/SSE2).


1.19.1 - 10 Dec 2010
--------------------
Changes:
. Rebuilt for Win98 with: VS2005 Express, Windows SDK 6.0, SAPI 5.1
. Improved detection of No-Slot-Clock accesses (GEOS now working).


1.19.0 - 28 Aug 2010
--------------------
Changes:
. Added No-Slot-Clock (located in $C300 ROM space).


1.18.2 - 17 Aug 2010
--------------------
Fixes:
. [Bug #017055] DDial timer running very fast.
  - TAPEIN.bit7 was being read from floating-bus. Now fixed high.
. [Bug# 007237] VBl IO reg not updated in 'Stepping' mode
. Loading save-state file (.aws) wasn't Win32-closing .dsk images in drives.


1.18.1 - 14 Feb 2010 (beta)
---------------------------
Changes:
. Added "-speech" cmd-line switch
  - Captures text from COUT and outputs to Speech API
  - Ctrl+RESET and FullSpeed mode (ie. disk access) will purge the speech buffers

Fixes:
. [Bug #16699] Debugger: G xxxx not clearing BP